syntax = "proto3";

package greet;

option java_package = "com.charlesluxinger.grpc";
option java_multiple_files = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

service GreetService {
  rpc GreetManyTimes(GreetRequest) returns (stream GreetManyTimesResponse) {};
}